--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,3 +7,15 @@ body {
     background-position: center;
     height: 100vh;
   }
+
+.footer {
+   position: relative;
+   float: bottom;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   color: white;
+   text-align: center;
+   opacity: 0.6;
+   font-family: Avenir;
+}
