--- a/client/src/components/Button/Button.css
+++ b/client/src/components/Button/Button.css
@@ -12,3 +12,9 @@
   border-radius: 8px;
   margin-top: 7px;
 }
+
+@media only screen and (max-width) {
+  .button {
+    background-color: rgba(0,0,0,0);
+  }
+}
