--- a/client/src/components/RecipeList/RecipeList.css
+++ b/client/src/components/RecipeList/RecipeList.css
@@ -6,3 +6,9 @@
   margin-top: 10px;
   border-radius: 20px;
 }
+
+@media only screen and (max-width:500px) {
+  .list-group-item {
+    background: rgba(0,0,0,0);
+  }
+}
